--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -19177,7 +19177,7 @@
     </unit>
     <unit id="QOeiiDo">
       <notes>
-        <note category="german">Jede &lt;strong&gt;Aufräumaktion&lt;/strong&gt; enfernt einen Haufen von der Leiste. Wenn alle Häufen verschwunden sind, kann die Zone nach Lust und Laune erforscht werden.</note>
+        <note category="german">Jede &lt;strong&gt;Aufräumaktion&lt;/strong&gt; entfernt einen Haufen von der Leiste. Wenn alle Häufen verschwunden sind, kann die Zone nach Lust und Laune erforscht werden.</note>
       </notes>
       <segment>
         <source>Jede &lt;strong&gt;Aufräumaktion&lt;/strong&gt; enfernt einen Haufen von der Leiste. Wenn alle Häufen verschwunden sind, kann die Zone nach Lust und Laune erforscht werden.</source>
@@ -20064,6 +20064,78 @@
       <segment>
         <source>Unser verbesserter Wachturm ermöglicht die ungehinderte Rückkehr eines jeden Bürgers, der sich in der Nähe der Stadt befindet!</source>
         <target>Notre tour de guet améliorée permet le rapatriement gratuit de n'importe quel citoyen qui se trouve à proximité de la ville !</target>
+      </segment>
+    </unit>
+    <unit id="Tf8a568">
+      <notes>
+        <note category="german">Du kannst einen Teil deines Sauerstoffs zur Flucht verwenden, indem du in die gewünschte Richtung sprintest.</note>
+      </notes>
+      <segment>
+        <source>Du kannst einen Teil deines Sauerstoffs zur Flucht verwenden, indem du in die gewünschte Richtung sprintest.</source>
+        <target>Vous pouvez utiliser une partie de votre oxygène pour vous échapper en sprintant dans la direction que vous voulez.</target>
+      </segment>
+    </unit>
+    <unit id="ywafrVf" name="Du kannst dieses Gebäude mit allen gefundenen Ressourcen verlassen.">
+      <notes>
+        <note category="german">Du kannst dieses Gebäude mit allen gefundenen Ressourcen verlassen.</note>
+      </notes>
+      <segment>
+        <source>Du kannst dieses Gebäude mit allen gefundenen Ressourcen verlassen.</source>
+        <target>Vous pouvez sortir de ce bâtiment en emportant toutes les ressources que vous avez trouvé.</target>
+      </segment>
+    </unit>
+    <unit id="Tg_wgai">
+      <notes>
+        <note category="german">Verzweifelt suchst du in diesem Raum nach etwas, aber wie lange wirst du an diesem unheilvollen Ort durchhalten?</note>
+      </notes>
+      <segment>
+        <source>Verzweifelt suchst du in diesem Raum nach etwas, aber wie lange wirst du an diesem unheilvollen Ort durchhalten?</source>
+        <target>Vous cherchez désespérement un objet dans cette pièce, mais combien de temps tiendrez-vous dans cet endroit infâme ?</target>
+      </segment>
+    </unit>
+    <unit id="jDpq7iy">
+      <notes>
+        <note category="german">Du kannst die üblen Gerüche und den Anblick dieses Raumes nicht länger ertragen.</note>
+      </notes>
+      <segment>
+        <source>Du kannst die üblen Gerüche und den Anblick dieses Raumes nicht länger ertragen.</source>
+        <target>Vous ne supportez plus les odeurs infâmes et la vision de cette pièce.</target>
+      </segment>
+    </unit>
+    <unit id="2Zr9t8H">
+      <notes>
+        <note category="german">Du kannst diesen Raum betreten, vielleicht findest du einige interessante Gegenstände.</note>
+      </notes>
+      <segment>
+        <source>Du kannst diesen Raum betreten, vielleicht findest du einige interessante Gegenstände.</source>
+        <target>Vous pouvez entrer dans cette pièce, peut être y trouverez vous des choses intéressantes.</target>
+      </segment>
+    </unit>
+    <unit id="SHnNJFY" name="Diese Aktion kostet dich Sauerstoff, trotzdem flüchten?">
+      <notes>
+        <note category="german">Diese Aktion kostet dich Sauerstoff, trotzdem flüchten?</note>
+      </notes>
+      <segment>
+        <source>Diese Aktion kostet dich Sauerstoff, trotzdem flüchten?</source>
+        <target>Cette action vous coûte en Oxygène, fuir quand même ?</target>
+      </segment>
+    </unit>
+    <unit id="RlEfb.v">
+      <notes>
+        <note category="german">Diese Aktion ermöglicht es dir, die Tiefen dieses Gebäude zu erkunden und wertvolle Ressourcen zu bergen. Sei aber nicht zu gierig, denn deine Zeit ist begrenzt!</note>
+      </notes>
+      <segment>
+        <source>Diese Aktion ermöglicht es dir, die Tiefen dieses Gebäude zu erkunden und wertvolle Ressourcen zu bergen. Sei aber nicht zu gierig, denn deine Zeit ist begrenzt!</source>
+        <target>Cette action vous permet d'entrer dans ce bâtiment en profondeur pour ramener de nombreuses ressources, n'ayez pas les yeux plus gros que le ventre, votre temps est compté !</target>
+      </segment>
+    </unit>
+    <unit id="AGQV69U" name="Das Gebäude betreten? (Diese Aktion kostet 1AP)">
+      <notes>
+        <note category="german">Das Gebäude betreten? (Diese Aktion kostet 1AP)</note>
+      </notes>
+      <segment>
+        <source>Das Gebäude betreten? (Diese Aktion kostet 1AP)</source>
+        <target>Entrer dans le bâtiment ? (cette action coûte 1 PA)</target>
       </segment>
     </unit>
   </file>
