--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -20082,5 +20082,14 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>Das Gebäude betreten? (Diese Aktion kostet 1AP)</target>
       </segment>
     </unit>
+    <unit id="LkEJIMQ" name="Kein Wasser mehr!">
+      <notes>
+        <note category="german">Kein Wasser mehr!</note>
+      </notes>
+      <segment>
+        <source>Kein Wasser mehr!</source>
+        <target>Kein Wasser mehr!</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
