--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -20085,5 +20085,32 @@
         <target>¡No hay más agua!</target>
       </segment>
     </unit>
+    <unit id="DjCbLrn">
+      <notes>
+        <note category="german">&lt;strong&gt;Verlust der Zonenkontrolle&lt;/strong&gt;: Die Suchen der Bürger wurden unterbrochen!</note>
+      </notes>
+      <segment>
+        <source>&lt;strong&gt;Verlust der Zonenkontrolle&lt;/strong&gt;: Die Suchen der Bürger wurden unterbrochen!</source>
+        <target><![CDATA[<strong>Pérdida de control</strong>: las búsquedas de Citoyen han sido interrumpidas!]]></target>
+      </segment>
+    </unit>
+    <unit id="ihMj9Wy">
+      <notes>
+        <note category="german">%citizen% hat die Zone verlassen, &lt;strong&gt;die Zombies werden in wenigen Minuten die Kontrolle erlangen wenn wir nichts unternehmen.&lt;/strong&gt;</note>
+      </notes>
+      <segment>
+        <source>%citizen% hat die Zone verlassen, &lt;strong&gt;die Zombies werden in wenigen Minuten die Kontrolle erlangen wenn wir nichts unternehmen.&lt;/strong&gt;</source>
+        <target><![CDATA[%citizen% se marchó, <strong>la zona quedará bajo el control de los zombies en unos minutos si no se hace nada</strong>.]]></target>
+      </segment>
+    </unit>
+    <unit id="QZHPoCR" name="&lt;span&gt;Es ist soweit: Der Schmaus kann beginnen!&lt;/span&gt;">
+      <notes>
+        <note category="german">&lt;span&gt;Es ist soweit: Der Schmaus kann beginnen!&lt;/span&gt;</note>
+      </notes>
+      <segment>
+        <source>&lt;span&gt;Es ist soweit: Der Schmaus kann beginnen!&lt;/span&gt;</source>
+        <target><![CDATA[<span>Más tiempo: ¡Que empiece el festín!</span>]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
