--- a/translations/global.en.xlf
+++ b/translations/global.en.xlf
@@ -2780,5 +2780,14 @@
         <target>Click to change page</target>
       </segment>
     </unit>
+    <unit id="r7op6WZ">
+      <notes>
+        <note category="german">Es ist nicht erlaubt, im Chaos-Modus einen Gegenstand an einen Bürger zu senden, der sich außerhalb der Stadt befindet.</note>
+      </notes>
+      <segment>
+        <source>Es ist nicht erlaubt, im Chaos-Modus einen Gegenstand an einen Bürger zu senden, der sich außerhalb der Stadt befindet.</source>
+        <target>Es ist nicht erlaubt, im Chaos-Modus einen Gegenstand an einen Bürger zu senden, der sich außerhalb der Stadt befindet.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
