FR Translation for reactor death

--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -20180,7 +20180,7 @@
       </notes>
       <segment>
         <source>Du warst gerade dabei dich daheim einzubunkern, als dir plötzlich auffällt dass etwas mit dem Reaktor nicht zu stimmen scheint, auf den die anderen Bürger so stolz sind... jetzt wurden sie durch eine ohrenbetäubende Explosion ausgelöscht. Als du wieder zu dir kommst liegst du in einem riesigen Krater, der einmal deine Stadt war; dein Blut kocht und deine Haut schmilzt dir vom Fleisch. Erst nach einigen Minuten unerträglicher Schmerzen verlässt auch du diese Welt.</source>
-        <target>Du warst gerade dabei dich daheim einzubunkern, als dir plötzlich auffällt dass etwas mit dem Reaktor nicht zu stimmen scheint, auf den die anderen Bürger so stolz sind... jetzt wurden sie durch eine ohrenbetäubende Explosion ausgelöscht. Als du wieder zu dir kommst liegst du in einem riesigen Krater, der einmal deine Stadt war; dein Blut kocht und deine Haut schmilzt dir vom Fleisch. Erst nach einigen Minuten unerträglicher Schmerzen verlässt auch du diese Welt.</target>
+        <target>Vous étiez sur le point de vous barricader dans votre maison, quand tout à coup vous vous rendez compte que quelque chose ne va pas avec le réacteur dont les autres citoyens étaient si fiers... puis ils ont été anéantis par une explosion assourdissante. Lorsque vous reprenez conscience, vous vous retrouvez dans un énorme cratère qui était autrefois votre ville; votre sang bout et votre peau se décompose. Ce n’est qu’après quelques minutes de douleur insupportable que vous finissez par succomber.</target>
       </segment>
     </unit>
   </file>
