--- a/translations/global.fr.xlf
+++ b/translations/global.fr.xlf
@@ -2796,5 +2796,41 @@
         <target>Vous n'avez pas le droit d'envoyer un objet à un citoyen hors de la ville en mode chaos.</target>
       </segment>
     </unit>
+    <unit id="Ot4PwfY" name="Pin entfernen">
+      <notes>
+        <note category="german">Pin entfernen</note>
+      </notes>
+      <segment>
+        <source>Pin entfernen</source>
+        <target>Pin entfernen</target>
+      </segment>
+    </unit>
+    <unit id="oQRkk47" name="Angepinnte Nachricht">
+      <notes>
+        <note category="german">Angepinnte Nachricht</note>
+      </notes>
+      <segment>
+        <source>Angepinnte Nachricht</source>
+        <target>Angepinnte Nachricht</target>
+      </segment>
+    </unit>
+    <unit id="qsFANcA" name="Einblenden">
+      <notes>
+        <note category="german">Einblenden</note>
+      </notes>
+      <segment>
+        <source>Einblenden</source>
+        <target>Einblenden</target>
+      </segment>
+    </unit>
+    <unit id="fufp5fd" name="Ausgeblendete Nachricht von %user%. Klicken, um anzuzeigen.">
+      <notes>
+        <note category="german">Ausgeblendete Nachricht von %user%. Klicken, um anzuzeigen.</note>
+      </notes>
+      <segment>
+        <source>Ausgeblendete Nachricht von %user%. Klicken, um anzuzeigen.</source>
+        <target>Ausgeblendete Nachricht von %user%. Klicken, um anzuzeigen.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
