--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -8336,5 +8336,14 @@
         <target>Vous n'en revenez pas ! Toute la voracité qui vous rongeait de l'intérieur disparaît petit à petit. Est-ce vraiment possible que vous soyez redevenu humain ?</target>
       </segment>
     </unit>
+    <unit id="s9W2MOB">
+      <notes>
+        <note category="german">Du hast {items_consume_1} verwendet, um das Wasser in {item_from} zu reinigen. Du hast {items_spawn} erhalten...</note>
+      </notes>
+      <segment>
+        <source>Du hast {items_consume_1} verwendet, um das Wasser in {item_from} zu reinigen. Du hast {items_spawn} erhalten...</source>
+        <target>Vous avez utilisé {items_consume_1} pour purifier l'eau contenue dans {item_from}. Vous avez obtenu {items_spawn}...</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
